[package]
name = "liqr"
version = "0.1.0"
authors = ["Abhishek More <abhishekmore@tamu.edu>"]
license = "MIT"
description = "A CLI to generate QR codes for live servers"
readme = "README.md"
homepage = "https://github.com/abhishekmore/liqr"
repository = "https://github.com/abhishekmore/liqr"
keywords = ["cli", "qr", "qrcode", "liveserver", "live-server"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
qr2term = "0.3.1"
local-ip-address = "0.4.9"
